--- a/demo/index.html
+++ b/demo/index.html
@@ -7,12 +7,10 @@
   <body>
 
     <div class="typeMe" data-typeit="hi mate wadup ?"></div>
-    <div class="typeMe" data-typeit="I'm aright bro thx !"><span>|</span></div>
+    <div class="typeMe" data-typeit="I'm aright bro thx !"></div>
 
     <script src="../lib/typewriter.js" charset="utf-8"></script>
     <script type="text/javascript">
-
-    // text: [...$typeMe[i].dataset.typeit],
 
       new Typewriter({
         target: '.typeMe',
