--- a/demo/index.html
+++ b/demo/index.html
@@ -6,15 +6,16 @@
   </head>
   <body>
 
-    <div class="typeMe" data-typeit="hi mate wadup ?"></div>
-    <div class="typeMe" data-typeit="I'm aright bro thx !"></div>
+    <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
+    <!-- <div class="typeMe" data-typeit="I'm aright bro thx !"></div> -->
 
     <script src="../lib/typewriter.js" charset="utf-8"></script>
     <script type="text/javascript">
 
       new Typewriter({
         target: '.typeMe',
-        speed: 10,
+        speed: 2000,
+        humanize: false,
         fixePosition: true,
         cursor: '|'
       });
