--- a/demo/index.html
+++ b/demo/index.html
@@ -7,15 +7,15 @@
   <body>
 
     <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
-    <!-- <div class="typeMe" data-typeit="I'm aright bro thx !"></div> -->
+    <div class="typeMe" data-typeit="I'm aright bro thx !"></div>
+    <div class="typeMe">yo yo yo !</div>
 
     <script src="../lib/typewriter.js" charset="utf-8"></script>
     <script type="text/javascript">
 
       new Typewriter({
         target: '.typeMe',
-        speed: 2000,
-        humanize: false,
+        speed: 250,
         fixePosition: true,
         cursor: '|'
       });
