--- a/demo/index.html
+++ b/demo/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
 
-    <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
-    <div class="typeMe" data-typeit="I'm aright bro thx !"></div>
-    <div class="typeMe">yo yo yo !</div>
+    <!-- <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
+    <div class="typeMe" data-typeit="I'm aright bro thx !"></div> -->
+    <div class="typeMe">yo yo yo 485165498!</div>
 
     <script src="../lib/typewriter.js" charset="utf-8"></script>
     <script type="text/javascript">
@@ -17,7 +17,9 @@
         target: '.typeMe',
         speed: 250,
         fixePosition: true,
-        cursor: '|'
+        cursor: '|',
+        mistype: true,
+        mistypeRate: 10
       });
 
     </script>
