--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
 
     <!-- <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
     <div class="typeMe" data-typeit="I'm aright bro thx !"></div> -->
-    <div class="typeMe">Saaaalut mon ami 485165498!</div>
+    <div class="typeMe">Saaaaawwwwalut mon ami 485165498!</div>
 
     <script src="../lib/typewriter.js" charset="utf-8"></script>
     <script type="text/javascript">
