--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
 
     <!-- <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
     <div class="typeMe" data-typeit="I'm aright bro thx !"></div> -->
-    <div class="typeMe">Saaaaawwwwalut mon ami 485165498!</div>
+    <div class="typeMe">Cooooooucou Alice, j'ai faim !</div>
 
     <script src="../lib/typewriter.js" charset="utf-8"></script>
     <script type="text/javascript">
@@ -19,7 +19,7 @@
         fixePosition: true,
         cursor: '|',
         mistype: true,
-        mistypeRate: 30,
+        mistypeRate: 50,
         keyboard: 'azerty'
       });
 
