--- a/demo/index.html
+++ b/demo/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
+  <body style="background: #324350; color: white">
 
     <!-- <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
     <div class="typeMe" data-typeit="I'm aright bro thx !"></div> -->
-    <div class="typeMe">Cooooooucou Alice, j'ai faim !</div>
+    <div class="typeMe">Coucou Alice!</div>
 
     <script src="../lib/typewriter.js" charset="utf-8"></script>
     <script type="text/javascript">
@@ -19,7 +19,7 @@
         fixePosition: true,
         cursor: '|',
         mistype: true,
-        mistypeRate: 50,
+        mistypeRate: 30,
         keyboard: 'azerty'
       });
 
