--- a/demo/index.html
+++ b/demo/index.html
@@ -9,17 +9,18 @@
     <!-- <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
     <div class="typeMe" data-typeit="I'm aright bro thx !"></div> -->
     <div class="typeMe">Avec l'arrivée des premiers frimas, les insectes se préparent à la survie. Rassemblées dans un même abri, les coccinelles résistent grâce à une substance "antigel" présente dans leur sang. Chez les frelons, seules les femelles "fondatrices" hibernent. Grâce au nectar collecté, les abeilles ont des réserves pour l'hiver tandis que le papillon vulcain s'envole, lui, vers des cieux plus cléments.</div>
+    <div class="typeMe">Avec l'arrivée des premiers frimas, les insectes se préparent à la survie. Rassemblées dans un même abri, les coccinelles résistent grâce à une substance "antigel" présente dans leur sang. Chez les frelons, seules les femelles "fondatrices" hibernent. Grâce au nectar collecté, les abeilles ont des réserves pour l'hiver tandis que le papillon vulcain s'envole, lui, vers des cieux plus cléments.</div>
 
     <script src="../lib/typewriter.js" charset="utf-8"></script>
     <script type="text/javascript">
 
       new Typewriter({
         target: '.typeMe',
-        speed: 200,
+        speed: 50,
         fixePosition: true,
         cursor: '|',
         mistyping: true,
-        mistypingRate: 2,
+        mistypingRate: 3,
         keyboard: 'azerty'
       });
 
