--- a/demo/index.html
+++ b/demo/index.html
@@ -11,10 +11,10 @@
     <div class="typeMe">Avec l'arrivée des premiers frimas, les insectes se préparent à la survie.</div>
     <!-- <div class="typeMe">Avec l'arrivée des premiers frimas</div> -->
 
-    <script src="../lib/typewriter.js" charset="utf-8"></script>
+    <script src="../lib/typograph.js" charset="utf-8"></script>
     <script type="text/javascript">
 
-      let typed = new Typewriter({
+      let typed = new Typograph({
         target: '.typeMe',
         speed: 150,
         fixePosition: true,
