--- a/demo/index.html
+++ b/demo/index.html
@@ -6,13 +6,13 @@
   </head>
   <body style="background: #324350; color: white">
 
-    <!-- <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
-    <div class="typeMe" data-typeit="I'm aright bro thx !"></div> -->
+    <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
+    <div class="typeMe" data-typeit="I'm aright bro thx !"></div>
     <div class="typeMe">Avec l'arrivée des premiers frimas, les insectes se préparent à la survie.</div>
     <!-- <div class="typeMe">Avec l'arrivée des premiers frimas</div> -->
 
     <script src="../lib/typograph.js" charset="utf-8"></script>
-    <script type="text/javascript"> 
+    <script type="text/javascript">
 
       let typed = new Typograph({
         target: '.typeMe',
@@ -34,8 +34,6 @@
           });
         }
       });
-
-      console.log( typed.getCursor() );
 
     </script>
   </body>
