--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background: #324350; color: white">
 
-    <div class="typeMe" data-typeit="Hi ! Welcome into my workshop"></div>
+    <div class="typeMe" data-typeit="Hi ! Welcome in my workshop">qsodkqsi</div>
 
     <script src="../lib/typograph.min.js" charset="utf-8"></script>
     <script type="text/javascript">
@@ -20,15 +20,15 @@
         keyboard: 'azerty',
         mistypingRate: 2,
         callback: function() {
-          this.erase({
-            callback: () => {
-              this.retype({
-                text: 'Thanks mate',
-                eraseBefore: true,
-                eraseSpeed: 1000
-              });
-            }
-          });
+          // this.erase({
+          //   callback: () => {
+          //     this.retype({
+          //       text: 'Thanks mate',
+          //       eraseBefore: true,
+          //       eraseSpeed: 1000
+          //     });
+          //   }
+          // });
         }
       });
 
