Prevent multi blink style tag insertion

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background: #324350; color: white">
 
-    <div class="typeMe" data-typeit="Hi ! Welcome in my workshop">qsodkqsi</div>
+    <div class="typeMe" data-typeit="Hi ! Welcome in my workshop"></div>
 
     <script src="../lib/typograph.min.js" charset="utf-8"></script>
     <script type="text/javascript">
