--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background: #324350; color: white">
 
-    <div class="typeMe" data-typeit="Hi ! Welcome in my workshop"></div>
+    <div class="typeMe" data-typeit="Hi mate ! Thanks for using Typograph"></div>
 
     <script src="../lib/typograph.min.js" charset="utf-8"></script>
     <script type="text/javascript">
@@ -23,7 +23,7 @@
           this.erase({
             callback: function() {
               this.retype({
-                text: 'Thanks mate !',
+                text: 'Enjoy !',
                 eraseBefore: true,
                 eraseSpeed: 1000
               });
